testing and maps

--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
         </section>
         <section>
             <h1>Приєднуйтесь до мережі пекарень</h1>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d195.76303854086066!2d14.395170403090454!3d50.107209751941944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b95e1fd46c49b%3A0xbdbdf07a5fc62359!2sTaTy%C5%A0o%20ukrajinsk%C3%A9%20bistro!5e0!3m2!1suk!2scz!4v1735509153051!5m2!1suk!2scz" 
+            width="603" 
+            height="595" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
    </main>
 
@@ -116,7 +122,7 @@
         </li>
     </ul>
     <a href="#" target="_blank">Політика конфіденційності</a>
-    <p>© 2022 Дані захищені</p>
+    <p>&copy; 2022 Дані захищені</p>
 </address>
    </footer>
 </body>
