--- a/test/testtable.html
+++ b/test/testtable.html
@@ -65,13 +65,15 @@
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
      referrerpolicy="strict-origin-when-cross-origin" 
      allowfullscreen></iframe>
+
      <audio controls>
         <source src="./testaudio.mp3"/>
 
      </audio>
-     <video controls>
-        <source src="" />
 
+     <video controls>
+        <source src="" type="video/mp4"/>
+<!--коли відео у форматі webm воно важить менше і є кращим-->
      </video>
 </body>
 </html>
